<resources>
    <string name="app_name">LoginAndSignUp</string>
    <string name="startToUse">Начать пользоваться</string>
    <string name="laughAndSmileEveryDay">Смейся и улыбайся каждый день</string>
    <string name="doYouHaveAnAccount">Есть аккаунт? Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message_sentToMail">На вашу почту было отправлено письмо</string>
    <string name="dialog_message_closw">Закрыть</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="mail">Электронная почта</string>
    <string name="createPassword">Создать пароль</string>
    <string name="createNewPassword">Придумайте пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="bigLetter">Заглавная буква</string>
    <string name="numbers">Цифры</string>
    <string name="isPasswordUnique">Совпадение пароля</string>
    <string name="specialSymbols">Специальные символы</string>
    <string name="next">Далее</string>
    <string name="resetPassword">Сброс пароля</string>
    <string name="registartion">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email_already_registered">"Данная почта уже зарегистрирована"</string>
    <string name="incorrect_login">"Неправильный логин или пароль"</string>
    <string name="try_again">Попробуйте еще раз</string>
</resources>