<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createPassword.CreatePasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gothampro_medium"
        android:minHeight="48dp"
        android:text="@string/createPassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="156dp"
        android:background="#F5F5F5"
        android:fontFamily="@font/gothampro_medium"
        android:hint="@string/createNewPassword"
        android:inputType="textPassword"
        android:textColor="#C1C1C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autofillHints="password" />
    <ImageView
        android:id="@+id/isPasswordVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/createPassword"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintTop_toTopOf="@+id/createPassword"
        app:srcCompat="@drawable/ispasswordvisible"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="260dp"
        android:background="#F5F5F5"
        android:fontFamily="@font/gothampro_medium"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:textColor="#C1C1C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autofillHints="password" />

    <ImageView
        android:id="@+id/pointBigLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/isLetterBig"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toTopOf="@+id/isLetterBig"
        app:srcCompat="@drawable/point"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/isLetterBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/bigLetter"
        app:layout_constraintStart_toEndOf="@+id/pointBigLetter"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

    <ImageView
        android:id="@+id/pointNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/areThereNumbers"
        app:layout_constraintStart_toStartOf="@+id/pointBigLetter"
        app:layout_constraintTop_toTopOf="@+id/areThereNumbers"
        app:srcCompat="@drawable/point"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/areThereNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/numbers"
        app:layout_constraintStart_toStartOf="@+id/isLetterBig"
        app:layout_constraintTop_toBottomOf="@+id/isLetterBig" />

    <ImageView
        android:id="@+id/pointPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/isUniquePassword"
        app:layout_constraintStart_toStartOf="@+id/pointSymbols"
        app:layout_constraintTop_toTopOf="@+id/isUniquePassword"
        app:srcCompat="@drawable/point"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/isUniquePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/isPasswordUnique"
        app:layout_constraintStart_toStartOf="@+id/specialSymbols"
        app:layout_constraintTop_toBottomOf="@+id/specialSymbols" />

    <ImageView
        android:id="@+id/pointSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/specialSymbols"
        app:layout_constraintStart_toStartOf="@+id/pointBigLetter"
        app:layout_constraintTop_toTopOf="@+id/specialSymbols"
        app:srcCompat="@drawable/point"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/specialSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/specialSymbols"
        app:layout_constraintStart_toStartOf="@+id/areThereNumbers"
        app:layout_constraintTop_toBottomOf="@+id/areThereNumbers" />

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F7F7F8"
        android:fontFamily="@font/gothampro_medium"
        android:text="@string/next"
        android:textColor="#C1C1C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isUniquePassword"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/isPasswordVisible2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ispasswordvisible"
        app:layout_constraintBottom_toBottomOf="@+id/repeatPassword"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintTop_toTopOf="@+id/repeatPassword"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>